--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <h4>Andrés Felipe</h4>
     <h5>Andrés Felipe</h5>
     <h6>Andrés Felipe</h6>
-    <p>Andrés Felipe</p>-->
+    <p>Andrés Felipe</p>
+
+    HAY ROWSPAN TAMBIEN-->
 
     <table border="1">
+        <caption>TABLA DE POSICIONES</caption>
         <thead>
             <tr>
                 <th>EQUIPO</th>
@@ -30,27 +33,42 @@
                 <td>Colombia</td>
                 <td>5</td>
                 <td>15</td>
-                <td></td>
+                <td>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="Escudo selección Colombia" width="80px" height="80 px">
+                </td>
             </tr>
             <tr>
                 <td>Brazil</td>
                 <td>3</td>
                 <td>4</td>
-                <td></td>
+                <td>
+                    <img src="/img/escudo_brazil.png" alt="Escudo de Brazil" width="80px" height="80px">
+                </td>
             </tr>
             <tr>
                 <td>Argentina</td>
                 <td>6</td>
                 <td>20</td>
-                <td></td>
+                <td>
+                    <img src="/img/escudo_argentina.png" alt="Escudo de argentina" width="80px" height="80px">
+                </td>
             </tr>
             <tr>
                 <td>México</td>
                 <td>5</td>
                 <td>0</td>
-                <td></td>
+                <td>
+                    <img src="https://as01.epimg.net/img/comunes/fotos/fichas/equipos/large/1824.png" alt="Escudo Seleccion Mexicana" width="80px" height="80px">
+                </td>
             </tr>
         </body>
+        <tfoot>
+            <tr>
+                <td colspan="4">
+                    <center>Eliminatoria al mundial</center>
+                </td>
+            </tr>
+        </tfoot>
     </table>
     
 </body>
