Load file texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <li><a href="html/tablas.html">Ir a tablas</a></li>
         <li><a href="">Ir a formularios</a></li>
-        <li><a href="">Ir a textos</a></li>
+        <li><a href="html/texto.html">Ir a textos</a></li>
         <li><a href="html/multimedia.html">Ir a multimedia</a></li>
     </ul>
 </body>
