--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <ul>
         
         <li><a href="html/tablas.html">Ir a tablas</a></li>
-        <li><a href="">Ir a formularios</a></li>
+        <li><a href="html/formulario.html">Ir a formularios</a></li>
         <li><a href="">Ir a textos</a></li>
+        <li><a href="">Ir a semántica</a></li>
         <li><a href="html/multimedia.html">Ir a multimedia</a></li>
     </ul>
 </body>
