Update File Index

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 
     <ul>
-        <li><a href="html/tablas.html">Ir a tablas Ya</a></li>
-        <li><a href="html/formulario.html">Ir a formularios Ya</a></li>
-        <li><a href="html/textos.html">Ir a textos Ya</a></li>
+        <li><a href="html/tablas.html">Ir a Tablas</a></li>
+        <li><a href="html/formulario.html">Ir a formularios</a></li>
+        <li><a href="html/textos.html">Ir a textos</a></li>
         <li><a href="html/semantica.html">Ir a semántica</a></li>
-        <li><a href="html/agrupacion.html">Ir a agrupación Ya</a></li>
-        <li><a href="html/multimedia.html">Ir a multimedia Ya</a></li>
+        <li><a href="html/agrupacion.html">Ir a agrupación</a></li>
+        <li><a href="html/multimedia.html">Ir a multimedia</a></li>
     </ul>
 
 </body>
