Update File Multimedia

--- a/html/multimedia.html
+++ b/html/multimedia.html
@@ -6,7 +6,27 @@
     <title>Multimedia</title>
 </head>
 <body>
-    <iframe width="1350" height="492" src="https://www.youtube.com/embed/nMfPqeZjc2c" title="White Noise Black Screen | Sleep, Study, Focus | 10 Hours" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <li><a href="../index.html">Volver hacia atrás</a></li>
+    <h1>Bienvenido a multimedia</h1>
+    <h2>Quiero mostrarte algunos contenidos multimedia a continuación:</h2>
+
+    <img src="/multimedia/Gato.png" alt="Gato negro" width="100px" height="100px">
+    <br><h4>Gato negro pequeño</h4></br>
+
+    <img src="/multimedia/Gato.png" alt="Gato negro" width="400px" height="400px">
+    <br><h4>El mismo gato cuestionando solo que más grande gracias a los atributos width y height</h4></br>
+
+    <video src="/multimedia/crazy2.mp4" autoplay muted loop></video>
+    <br><h4>Video de un gato</h4></br>
+
+    <audio src="/multimedia/silly_song.mp3" controls>Música</audio>
+    <br><h4>Sonido de ambiente</h4></br>
+
+    <iframe width="700" height="300" src="https://www.youtube.com/embed/nMfPqeZjc2c" title="White Noise Black Screen | Sleep, Study, Focus | 10 Hours" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br><h4>Video de youtube</h4></br>
+
+    <ul>
+        <li><a href="../index.html">Volver hacia atrás</a></li>
+    </ul>
+    
 </body>
 </html>
