Update File Tablas

--- a/html/tablas.html
+++ b/html/tablas.html
@@ -8,67 +8,110 @@
 </head>
 <body>
     
-    <!--<h1>Andrés Felipe</h1>
-    <h2>Andrés Felipe</h2>
-    <h3>Andrés Felipe</h3>
-    <h4>Andrés Felipe</h4>
-    <h5>Andrés Felipe</h5>
-    <h6>Andrés Felipe</h6>
-    <p>Andrés Felipe</p>
-    HAY ROWSPAN TAMBIEN-->
-
     <table border="1">
-        <caption>TABLA DE POSICIONES</caption>
+        <caption><h1>Diferentes lenguajes de programación</h1></caption>
         <thead>
             <tr>
-                <th>EQUIPO</th>
-                <th>PARTIDOS</th>
-                <th>PUNTOS</th>
-                <th>ESCUDO</th>
+                <th rowspan="2">
+                    Lenguajes
+                </th>
+                <th colspan="3">
+                    <center>
+                        Datos
+                    </center>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    Tecnología
+                </th>
+                <th>
+                    Lanzamiento
+                </th>
+                <th>
+                    Logo
+                </th>
             </tr>
         </thead>
-        <body>
+        <tbody>
             <tr>
-                <td>Colombia</td>
-                <td>5</td>
-                <td>15</td>
                 <td>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="Escudo selección Colombia" width="80px" height="80 px">
+                    <center>
+                        JavaScript
+                    </center>
+                </td>
+                <td>
+                    <center>
+                        Front End
+                    </center>
+                </td>
+                <td>4 de diciembre de 1995</td>
+                <td>
+                    <img src="/multimedia/JavaScript_logo.png" alt="Logo de JavaScript" height="150px" width="150px">
                 </td>
             </tr>
             <tr>
-                <td>Brazil</td>
-                <td>3</td>
-                <td>4</td>
                 <td>
-                    <img src="/classes/img/escudo_brazil.png" alt="Escudo de Brazil" width="80px" height="80px">
+                    <center>
+                        Python
+                    </center>
+                </td>
+                <td>
+                    <center>
+                        Back End
+                    </center>
+                </td>
+                <td>20 de Febrero de 1991</td>
+                <td>
+                    <center>
+                        <img src="/multimedia/Python_logo.png" alt="Logo de Python" height="150px" width="150px">
+                    </center>
                 </td>
             </tr>
             <tr>
-                <td>Argentina</td>
-                <td>6</td>
-                <td>20</td>
                 <td>
-                    <img src="/classes/img/escudo_argentina.png" alt="Escudo de argentina" width="80px" height="80px">
+                    <center>
+                        HTML5
+                    </center>
+                </td>
+                <td>
+                    <center>
+                        Front End
+                    </center>
+                </td>
+                <td>28 de Octubre de 2014</td>
+                <td>
+                    <img src="/multimedia/HTML5_logo.png" alt="Logo de HTML5" height="150px" width="150px">
                 </td>
             </tr>
             <tr>
-                <td>México</td>
-                <td>5</td>
-                <td>0</td>
                 <td>
-                    <img src="https://as01.epimg.net/img/comunes/fotos/fichas/equipos/large/1824.png" alt="Escudo Seleccion Mexicana" width="80px" height="80px">
+                    <center>
+                        C#
+                    </center>
+                </td>
+                <td>
+                    <center>
+                        Back End
+                    </center>
+                </td>
+                <td>2001</td>
+                <td>
+                    <center>
+                        <img src="https://seeklogo.com/images/C/c-sharp-c-logo-02F17714BA-seeklogo.com.png" alt="Logo de C#" height="150px" width="150px">
+                    </center>
                 </td>
             </tr>
-        </body>
+        </tbody>
         <tfoot>
             <tr>
-                <td colspan="4">
-                    <center>Eliminatoria al mundial</center>
-                </td>
             </tr>
         </tfoot>
     </table>
-    <li><a href="../index.html">Volver hacia atrás</a></li>
+
+    <ul>
+        <li><a href="../index.html">Volver hacia atrás</a></li>
+    </ul>
+
 </body>
 </html>
