--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="html/semantica.html">Ir a semántica</a></li>
         <li><a href="html/agrupacion.html">Ir a agrupación</a></li>
         <li><a href="html/multimedia.html">Ir a multimedia</a></li>
+        <li><a href="html/estilos.html">Ir a estilos</a></li>
     </ul>
 
 </body>
