Update File Pagina and Index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="html/agrupacion.html">Ir a agrupación</a></li>
         <li><a href="html/multimedia.html">Ir a multimedia</a></li>
         <li><a href="html/estilos.html">Ir a estilos</a></li>
+        <li><a href="html/pagina.html">Ir a pagina</a></li>
     </ul>
 
 </body>
