--- a/index.html
+++ b/index.html
@@ -4,20 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="css/style_login.css">
 </head>
 <body>
 
-    <ul>
-        <li><a href="html/tablas.html">Ir a Tablas</a></li>
-        <li><a href="html/formulario.html">Ir a formularios</a></li>
-        <li><a href="html/textos.html">Ir a textos</a></li>
-        <li><a href="html/semantica.html">Ir a semántica</a></li>
-        <li><a href="html/agrupacion.html">Ir a agrupación</a></li>
-        <li><a href="html/multimedia.html">Ir a multimedia</a></li>
-        <li><a href="html/estilos.html">Ir a estilos</a></li>
-        <li><a href="html/pagina.html">Ir a pagina</a></li>
-        <li><a href="html/flexbox.html">Ir a flexbox</a></li>
-    </ul>
+    <div class="background">
+
+    </div>
+    
+    <div class="centering">
+        <form action="" class="my_form">
+            <div class="login_welcome">
+                <img src="https://img.freepik.com/vector-gratis/lindo-astronauta-montando-cohete-agitando-mano-icono-dibujos-animados-ilustracion-concepto-icono-tecnologia-ciencia_138676-2130.jpg" width="300px" alt="" class="login">
+                <h1>Iniciar Sesión</h1>
+            </div>
+            <div class="text_field">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Ingrese su correo electrónico" aria-label="email" required>
+                <img src="multimedia/email-svgrepo-com.svg" alt="Email Icon" title="Email Icon">
+            </div>
+            <div class="text_field">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" aria-label="password" required>
+                <img src="https://www.svgrepo.com/show/84319/password.svg" alt="Password Icon" title="Password Icon">
+            </div>
+            <input type="submit" class="my_form_button" value="Login">
+            <!-- .my_form_actions>.my_form_row>span{¿Olvidó su contraseña?}+a{Recuperar Cuenta} -->
+            <div class="my_form_actions">
+                <div class="my_form_row">
+                    <span>¿Olvidó su contraseña?</span>
+                    <a href="#">Recuperar Cuenta</a>
+                </div>
+            </div>
+            <!-- .my_form_signup>a{Crear Cuenta} -->
+            <div class="my_form_signup">
+                <a href="#">Crear Cuenta</a>
+            </div>
+        </form>
+    </div>
 
 </body>
 </html>
